<resources>
    <string name="app_name">MoreCulture</string>
        <string name="nav_open">Navigation Drawer geöffnet</string>
        <string name="nav_close">Navigation Drawer geschlossen</string>
    <string name="burger_menu">Burger Menu</string>
    <string name="account">Account</string>
    <string name="mobility_tags_bearbeiten">Mobility Tags bearbeiten</string>
    <string name="kultur_tags_bearbeiten">Kultur Tags bearbeiten</string>
    <string name="theater">Theater</string>
    <string name="konzert">Konzert</string>
    <string name="ausstellung">Ausstellung</string>
    <string name="kunst">Kunst</string>
    <string name="oper">Oper</string>
    <string name="modern">Modern</string>
    <string name="klassisch">Klassisch</string>
    <string name="openair">OpenAir</string>
    <string name="kreativ">Kreativ</string>
    <string name="workshop">Workshop</string>
    <string name="best_tigen">Bestätigen</string>
    <string name="event">Event</string>
    <string name="preis">Preis:</string>
    <string name="feed">Feed</string>
    <string name="interessen">Interessen</string>
    <string name="entfernung">Entfernung</string>
    <string name="es_konnten_keine_events_f_r_dich_gefunden_werden_versuche_die_suchreichweite_zu_erh_hen">Es konnten keine Events für dich gefunden werden, versuche die Suchreichweite zu erhöhen</string>
    <string name="list">List</string>
    <string name="home_button">Home Button</string>
    <string name="home">Home</string>
    <string name="ich_will_mehr_kultur">Ich will mehr Kultur!</string>
    <string name="map">Map</string>
    <string name="weiter">Weiter</string>
    <string name="zur_ck">Zurück</string>
    <string name="skip">Skip</string>
    <string name="welcome_text">Der Event-Feed zeigt dir standardmäßig alle Events an, die zu deinen ausgewählten Interessen passen und in deiner Nähe stattfinden. Oben rechts kannst du deinen Suchradius anpassen.</string>
    <string name="ffnet_ein_zuff_liges_event_f_r_dich">Öffnet ein Zuffäliges Event für dich.</string>
    <string name="interessen_zeigt_alle_events_die_zu_deinen_interessen_passen">Interessen: zeigt alle Events die zu deinen Interessen passen</string>
    <string name="entfernung_zeigt_dir_alle_events_im_suchradius">Entfernung: zeigt dir alle Events im Suchradius.</string>
    <string name="t_discription">Oben links findest du die App-Einstellungen. Admins haben dort die Möglichkeit, neue Events hinzuzufügen. Außerdem sind dort alle wichtigen Informationen für die Hausarbeit zu finden.</string>
    <string name="map_doppel">MAP:</string>
    <string name="zeigt_dir_alle_kulturst_tten_auf_einer_karte_an">Zeigt dir alle Kultureinrichtungen auf der Karte an.</string>
    <string name="t_start_discription">Mit dieser App findest du mühelos Kulturveranstaltungen, die genau deinen Interessen entsprechen – und das in deiner Nähe! Lass dich inspirieren und entdecke spannende Events, die perfekt zu dir passen.</string>
    <string name="willkommen_bei_more_culture">Willkommen bei More Culture!</string>
    <string name="mein_name_ist">Mein Name ist:</string>
    <string name="ich_mag">Ich mag:</string>
    <string name="befor_we_get_started">Bevor du loslegen kannst, benötigen wir ein paar Daten von dir. Bitte wähle die Tags aus, die dich ansprechen, und gib deinen Namen in das Textfeld ein.</string>
    <string name="ich_ben_tige">Ich benötige:</string>
    <string name="lege_deinen_suchradius_fest">Lege deinen Suchradius fest</string>
    <string name="navigationsleiste">Navigationsleiste:</string>
    <string name="der_linke_button_bringt_dich_zu_deinem_event_feed">Der linke Button bringt dich zu deinem Event-Feed.</string>
    <string name="der_mittlere_button_f_hrt_dich_zur_startseite_zur_ck">Der mittlere Button führt dich zur Startseite zurück.</string>
    <string name="der_rechte_button_ffnet_dein_benutzerkonto">Der rechte Button öffnet dein Benutzerkonto.</string>
    <string name="klicke_auf_das_demobild_um_ein_eigens_hochzuladen">Klicke auf das Demobild um ein eigens hochzuladen</string>
    <string name="name_der_veranstaltung">Name der Veranstaltung</string>
    <string name="ort_an_dem_das_event_stattfindet">Ort an dem das Event stattfindet:</string>
    <string name="uhrzeit">Uhrzeit:</string>
    <string name="datum_der_veranstaltung">Datum der Veranstaltung</string>
    <string name="beschreibung_der_veranstaltung">Beschreibung der Veranstaltung</string>
    <string name="add_location">Add Location</string>
    <string name="name_der_kultureinrichtung">Name der Kultureinrichtung</string>
    <string name="beschreibung_f_r_die_kultureinrichtung">Beschreibung für die Kultureinrichtung</string>
    <string name="webseite_der_kultureinrichtung">Webseite der Kultureinrichtung</string>
    <string name="url">url</string>
    <string name="cordinaten">Cordinaten</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude</string>
    <string name="auf_der_karte_ausw_hlen">Auf der Karte Auswählen</string>
    <string name="halte_den_marker_gedr_ckt_und_verschiebe_ihn_dahin_wo_sich_die_kultureinrichtung_befindet_und_best_tige_oben_rechts_die_position">Halte den Marker gedrückt und verschiebe ihn dahin, wo sich die Kultureinrichtung befindet, und bestätige oben rechts die Position.</string>
    <string name="warum_kotlin">Warum Kotlin</string>
    <string name="technische_infromationen">Technische Infromationen und UX</string>
    <string name="event_hinzuf_gen">Event hinzufügen</string>
    <string name="kultureinrichtung_hinzuf_gen">Kultureinrichtung hinzufügen</string>
    <string name="karte_aller_kultureinrichtungen">Karte aller Kultureinrichtungen</string>
    <string name="tippe_auf_den_ort_den_du_sehen_m_chtest">Tippe auf den Ort, den du sehen möchtest.</string>
    <string name="location">Location</string>
    <string name="alle_events">Alle Events</string>
    <string name="cover_bild_url_leer_demobild">Cover Bild URL (Leer = Demobild):</string>
    <string name="w_hle_eine_kultureinrichtung_aus_zu_der_du_ein_event_erstellen_m_chtest">Wähle eine Kultureinrichtung aus, zu der du ein Event erstellen möchtest.</string>
    <string name="kotlin_java">Kotlin / Java</string>
    <string name="warum_kotlin_und_nicht_java">Warum Kotlin und nicht Java?</string>
    <string name="kotlin_vereinfacht_viele_prozesse_die_bei_java_umfrangreich_geschreiben_werden_m_ssen">- Kotlin vereinfacht viele Prozesse, die bei Java umfrangreich geschreiben werden müssen</string>
    <string name="durch_das_seminar_habe_ich_viel_erfahrrung_mit_kotlin_gesammelt_was_das_coden_f_r_mich_vereinfacht_hat_zum_beispiel_osmium_streetmap">- Durch das Seminar habe ich viel Erfahrrung mit Kotlin gesammelt, was das Coden für mich vereinfacht hat. (Zum Beispiel Osmium StreetMap)</string>
    <string name="kotlin_hat_eine_entspannte_syntax_die_es_erlaubt_schneller_zu_coden">- Kotlin hat eine entspannte Syntax die es erlaubt, schneller zu Coden</string>
    <string name="die_ki_funktionen_helfen_dabei_java_code_in_kotlin_code_umzuwandeln_dadurch_wird_es_m_glich_java_code_snippets_direkt_im_editor_zu_verwenden">- Die KI-Funktionen helfen dabei, Java-Code in Kotlin-Code umzuwandeln. Dadurch wird es möglich, Java-Code-Snippets direkt im Editor zu verwenden.</string>
    <string name="google_bevorzugt_kotlin_gegen_ber_java_was_darauf_hindeutet_dass_kotlin_langfristig_relevant_bleiben_wird">- Google bevorzugt Kotlin gegenüber Java, was darauf hindeutet, dass Kotlin langfristig relevant bleiben wird.</string>
    <string name="warum_java_doch_nicht_so_schlecht_ist">Warum Java doch nicht so schlecht ist?</string>
    <string name="java_hat_eine_sehr_gro_e_community_was_die_fehlersuche_und_das_l_sen_von_problemen_deutlich_erleichtert">- Java hat eine sehr große Community, was die Fehlersuche und das Lösen von Problemen deutlich erleichtert.</string>
    <string name="java_ist_bereits_weit_verbreitet_und_wird_in_vielen_industriellen_umfeldern_genutzt_was_seine_relevanz_und_stabilit_t_in_der_softwareentwicklung_unterstreicht">- Java ist bereits weit verbreitet und wird in vielen industriellen Umfeldern genutzt, was seine Relevanz und Stabilität in der Softwareentwicklung unterstreicht.</string>
    <string name="native_java_l_uft_dank_der_java_virtual_machine_jvm_auf_nahezu_allen_plattformen_was_es_besonders_vielseitig_und_plattformunabh_ngig_macht">- Native Java läuft dank der Java Virtual Machine (JVM) auf nahezu allen Plattformen, was es besonders vielseitig und plattformunabhängig macht.</string>
    <string name="kotlin_4ever">Kotlin 4ever</string>
    <string name="ich_habe_mich_f_r_kotlin_entschieden_weil_ich_schon_lange_nicht_mehr_in_java_programmiert_habe">- Ich habe mich für Kotlin entschieden, weil ich schon lange nicht mehr in Java programmiert habe.</string>
    <string name="technik">Technik</string>
    <string name="hintergrundgedanken">Hintergrundgedanken</string>
    <string name="die_app_soll_menschen_unterst_tzen_kulturveranstaltungen_passend_zu_ihren_interessen_zu_entdecken_die_idee_dazu_entstand_in_einem_anderen_seminar_bei_dem_ich_gemeinsam_mit_weiteren_teilnehmern_eine_umfrage_in_einem_theater_durchgef_hrt_habe_im_gespr_ch_mit_mehreren_theaterbesuchern_wurde_deutlich_dass_viele_das_kulturangebot_in_k_ln_als_zu_umfangreich_und_un_bersichtlich_empfinden">Die App soll Menschen unterstützen, Kulturveranstaltungen passend zu ihren Interessen zu entdecken. Die Idee dazu entstand in einem Seminar, bei dem ich gemeinsam mit weiteren Teilnehmer:innen eine Umfrage in einem Theater durchgeführt habe. Im Gespräch mit mehreren Theaterbesucher:innen wurde deutlich, dass viele das Kulturangebot in Köln als zu umfangreich und unübersichtlich empfinden.</string>
    <string name="die_app_nutzt_einen_von_mir_erstellten_katalog_der_kulturveranstaltungen_und_einrichtungen_in_und_um_k_ln_umfasst_au_erdem_gibt_es_die_option_neue_kultureinrichtungen_und_events_hinzuzuf_gen_da_es_sich_um_eine_demo_handelt_und_nicht_um_ein_fertiges_produkt_mit_server_backend_sind_alle_funktionen_f_r_jeden_zug_nglich_der_event_katalog_ist_ebenfalls_nicht_zu_100_akkurat_was_bedeutet_dass_preise_termine_und_uhrzeiten_von_der_realit_t_abweichen_k_nnen_es_werden_auch_events_angezeigt_die_bereits_stattgefunden_haben_bei_einer_vollst_ndigen_bereitstellung_der_app_w_rde_das_server_backend_nat_rlich_nur_noch_bevorstehende_events_anzeigen_der_aktuelle_fokus_der_app_liegt_stark_auf_der_darstellung_von_geodaten_in_zukunft_plane_ich_weitere_funktionen_und_filter_hinzuzuf_gen_um_die_event_suche_weiter_zu_verbessern">Die App nutzt einen von mir erstellten Katalog, der Kulturveranstaltungen und Einrichtungen in und um Köln umfasst. Außerdem gibt es die Option, neue Kultureinrichtungen und Events hinzuzufügen. Da es sich um eine Demo handelt und nicht um ein fertiges Produkt mit Server-Backend, sind alle Funktionen für jeden zugänglich. Der Event-Katalog ist ebenfalls nicht zu 100 % akkurat. Er basiert zwar auf den Daten, welche die Theater auf Ihren Internetseiten zur Verfügung stellen, aber Preise, Termine und Uhrzeiten können trotzdem von der Realität abweichen. Es werden ebenfalls Events angezeigt, die bereits stattgefunden haben. Bei einer vollständigen Bereitstellung der App würde das Server-Backend natürlich nur noch bevorstehende Events anzeigen. Der aktuelle Fokus der App liegt stark auf der Darstellung von Geodaten. In Zukunft plane ich, weitere Funktionen und Filter hinzuzufügen, um die Event-Suche weiter zu verbessern.</string>
    <string name="die_app_verwendet_osmdroid_openstreetmaps_als_grundlage_f_r_alle_kartenansichten_und_room_datenbanken_f_r_die_speicherung_der_app_daten_die_datenbank_ist_dabei_wie_folgt_aufgebaut">Die App verwendet Osmdroid OpenStreetMaps als Grundlage für alle Kartenansichten und Room-Datenbanken für die Speicherung der App-Daten. Die Datenbank ist dabei wie folgt aufgebaut:</string>
</resources>