<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context="com.example.moreculture.MainActivity">

    <!-- Der Hauptcontainer mit dem roten Hintergrund -->

    <!-- Navigation Drawer (Burger Menü) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Container mit dem Burger-Menü-Button und dem Textfeld "Home" -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topIsland"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/red"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Burger-Menü-Button -->

            <!-- Textfeld "Home" -->
            <ImageButton
                android:id="@+id/burgerMenuButton"
                android:layout_width="72dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/burger_menu"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:src="@drawable/settings_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textColor="@android:color/white"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:elevation="0dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topIsland">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:elevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_more_culture_big" />

                <View
                    android:id="@+id/divider17"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@+id/IWantMoreCulture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <Button
                    android:id="@+id/IWantMoreCulture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:text="@string/ich_will_mehr_kultur"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <Button
                    android:id="@+id/MapButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:text="@string/karte_aller_kultureinrichtungen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/IWantMoreCulture" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomIslandHome"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            app:cardBackgroundColor="#4D4C4C"
            app:cardCornerRadius="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/eventListButton"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:adjustViewBounds="false"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/list"
                    app:cardCornerRadius="70dp"
                    app:srcCompat="@drawable/auffuhren" />

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#FFFFFF" />

                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/selectBottomIsland"
                    android:contentDescription="@string/home_button"
                    app:srcCompat="@drawable/heim" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#FFFFFF" />

                <ImageButton
                    android:id="@+id/accountButton"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/account"
                    app:srcCompat="@drawable/nutzer" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Weißer Hintergrund mit abgerundeten Ecken -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

