<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <org.osmdroid.views.MapView
                android:id="@+id/mapViewControl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:elevation="20dp"
                app:cardBackgroundColor="#D9FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/nextButton"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/weiter"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider12" />

                    <Button
                        android:id="@+id/backButton"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="60dp"
                        android:text="@string/zur_ck"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider12" />

                    <View
                        android:id="@+id/divider12"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginTop="15dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mapViewRadiusControl" />

                    <SeekBar
                        android:id="@+id/mapViewRadiusControl"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="146dp"
                        android:indeterminate="false"
                        app:layout_constraintEnd_toStartOf="@+id/mapViewRadius"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/mapViewRadius"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/mapViewRadiusControl"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/mapViewRadiusControl"
                        app:layout_constraintTop_toTopOf="@+id/mapViewRadiusControl"
                        tools:text="100 Km" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:elevation="20dp"
                app:cardBackgroundColor="#D9FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/lege_deinen_suchradius_fest"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>